cmake_minimum_required(VERSION 2.6.4)
project(flPlug)

set(FLP_MAJOR 0)
set(FLP_MINOR 0)
set(FLP_RELEASE 1)

set(CMAKE_BUILD_TYPE Release CACHE TYPE INTERNAL FORCE)

if(WIN32)
	string(SUBSTRING ${PROJECT_SOURCE_DIR} 0 2 CURRENT_DISC)
	set(BASE ${CURRENT_DISC}/devel)
	include_directories(${BASE}/heads)
	if(MINGW)
		set(fltk_name libfltk.a)
	else()
		set(fltk_name fltk_static.lib)
	endif()
	set(fltk_path ${BASE}/libs)
else()
	include_directories(/opt/fltk/include)
	set(fltk_path /opt/fltk/lib)
	set(fltk_name fltk)
endif()
find_library(FLTK_LIBRARIES ${fltk_name} PATHS ${fltk_path})
find_program(FLUID fluid PATHS ${fltk_path})
if(FLTK_LIBRARIES STREQUAL FLTK_LIBRARIES-NOTFOUND)
	message(FATAL_ERROR "FLTK not found!")
endif()
if(WIN32)
	set(FLTK_LIBRARIES "${FLTK_LIBRARIES};comctl32")
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
add_subdirectory(src)
add_subdirectory(doc)
add_subdirectory(test)

